enhance why choose us section

--- a/core/templates/core/home.html
+++ b/core/templates/core/home.html
@@ -61,7 +61,7 @@
             <a href="{% url 'about' %}" class="border border-white px-8 py-3 rounded-full hover:bg-white hover:text-black transition-colors">
                 About Foi Technologies
             </a>
-            <a href="#{% url 'contact' %}" class="bg-[--color-gold] text-black px-8 py-3 rounded-full hover:bg-yellow-400 transition-colors">
+            <a href="{% url 'contact' %}" class="bg-[--color-gold] text-black px-8 py-3 rounded-full hover:bg-yellow-400 transition-colors">
                 Partner With Us
             </a>
         </div>
