--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -19,6 +19,13 @@
     <meta property="og:url" content="https://www.foitechnologies.com" />
     <meta property="og:type" content="website" />
     
+    <div itemscope itemtype="https://schema.org/Organization" style="display:none;">
+        <meta itemprop="name" content="Foi Technologies"/>
+        <meta itemprop="url" content="https://www.foitechnologies.com"/>
+        <meta itemprop="logo" content="https://www.foitechnologies.com/static/img/logo.jpeg"/>
+      </div>
+      
+    
     <!-- Twitter Card Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="Foi Technologies - Smart Tech Solutions" />
