--- a/core/templates/core/base.html
+++ b/core/templates/core/base.html
@@ -56,10 +56,17 @@
             "https://www.linkedin.com/company/foi-technologies",
             "https://twitter.com/foitechnologies"
         ],
-        "address": {
+        "address": [
+        {
             "@type": "PostalAddress",
-            "addressCountry": "Kenya, UAE"
+            "addressCountry": "Kenya"
         },
+        {
+            "@type": "PostalAddress",
+            "addressCountry": "United Arab Emirates"
+        }
+        ]
+
         "contactPoint": {
             "@type": "ContactPoint",
             "contactType": "customer service",
